# ChangeLog for dev-java/libreadline-java
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/libreadline-java/ChangeLog,v 1.40 2014/08/10 20:21:13 slyfox Exp $

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
  libreadline-java-0.8.0-r3.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  17 Jun 2014; Manuel Rüger <mrueg@gentoo.org>
  -libreadline-java-0.8.0-r2.ebuild:
  NM: Cleanup superseded ebuilds.

  04 May 2012; Ralph Sennhauser <sera@gentoo.org>
  libreadline-java-0.8.0-r3.ebuild,
  +files/libreadline-java-0.8.0-respect-flags.patch:
  Respect CC and CFLAGS. #296741

  13 Apr 2012; Ulrich Müller <ulm@gentoo.org>
  libreadline-java-0.8.0-r3.ebuild:
  Move EAPI assignment to top of ebuild, bug 411875.

  01 Jan 2012; Ralph Sennhauser <sera@gentoo.org>
  libreadline-java-0.8.0-r2.ebuild, libreadline-java-0.8.0-r3.ebuild:
  Drop ia64 support #345433

  20 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  libreadline-java-0.8.0-r3.ebuild:
  ppc64 stable wrt #340799

  15 Oct 2010; Brent Baude <ranger@gentoo.org>
  libreadline-java-0.8.0-r3.ebuild:
  stable ppc, bug 340799

  15 Oct 2010; Markos Chandras <hwoarang@gentoo.org>
  libreadline-java-0.8.0-r3.ebuild:
  Stable on amd64 wrt bug #340799

  14 Oct 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  libreadline-java-0.8.0-r3.ebuild:
  x86 stable wrt bug #340799

*libreadline-java-0.8.0-r3 (13 Sep 2010)

  13 Sep 2010; Serkan Kaba <serkan@gentoo.org>
  +libreadline-java-0.8.0-r3.ebuild,
  +files/libreadline-java-0.8.0-ldflags.patch:
  Revbump to respect LDFLAGS. Reported by Diego E. Pettenò
  <flameeyes@gentoo.org> in bug #336302.

  17 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  -libreadline-java-0.8.0-r1.ebuild, libreadline-java-0.8.0-r2.ebuild:
  Let the eclass handle the source use flag dependencies and remove generation
  1 ebuild.

  17 Mar 2007; nixnut <nixnut@gentoo.org> libreadline-java-0.8.0-r2.ebuild: