@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>java</herd>
+	<herd>java</herd>
+	<upstream>
+		<remote-id type="sourceforge">java-readline</remote-id>
+	</upstream>
 </pkgmetadata>
